--- a/index.html
+++ b/index.html
@@ -10,68 +10,67 @@
 
 
         <!-- EPUBJS Renderer -->
-        <script src="../build/epub.min.js"></script>
-        <script src="../build/zip.min.js"></script>
-
-        <link rel="stylesheet" href="basic.css">
+        <script src="../build/epub.js"></script>
 
         <style type="text/css">
-
           body {
-            overflow: auto;
-            background: #eee;
-          }
-
-          #wrapper {
-            width: 480px;
-            height: 640px;
             overflow: hidden;
-            border: 1px solid #ccc;
-            margin: 20px auto;
-            background: #fff;
-            border-radius: 0 5px 5px 0;
           }
-
+          #main {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+          }
           #area {
-            width: 480px;
-            height: 650px;
-            margin: -5px auto;
-            -moz-box-shadow:      inset 10px 0 20px rgba(0,0,0,.1);
-            -webkit-box-shadow:   inset 10px 0 20px rgba(0,0,0,.1);
-            box-shadow:           inset 10px 0 20px rgba(0,0,0,.1);
-            padding: 40px 40px;
+            width: 80%;
+            height: 80%;
+            margin: 5% auto;
+            max-width: 1250px;
           }
-
-
+          #area iframe {
+            border: none;
+          }
+          #prev {
+            left: 40px;
+          }
+          #next {
+            right: 40px;
+          }
+          .arrow {
+            position: absolute;
+            top: 50%;
+            margin-top: -32px;
+            font-size: 64px;
+            color: #E2E2E2;
+            font-family: arial, sans-serif;
+            font-weight: bold;
+            cursor: pointer;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+          }
+          .arrow:hover {
+            color: #777;
+          }
+          .arrow:active {
+            color: #000;
+          }
         </style>
 
          <script>
             "use strict";
-
-            var Book = ePub("../reader/moby-dick.epub/", {
-              width: 400,
-              height: 600,
-              spreads : false
-            });
-
-
+            var Book = ePub("https://s3.amazonaws.com/moby-dick/");
         </script>
     </head>
     <body>
         <div id="main">
           <div id="prev" onclick="Book.prevPage();" class="arrow">‹</div>
-          <div id="wrapper">
-            <div id="area"></div>
-          </div>
+          <div id="area"></div>
           <div id="next" onclick="Book.nextPage();" class="arrow">›</div>
         </div>
 
         <script>
-
-            Book.renderTo("area").then(function(){
-              //Book.setStyle("width", "400px");
-            });
-
+            Book.renderTo("area");
         </script>
     </body>
 </html>
