--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <script>
             "use strict";
-            var Book = ePub("../reader/moby-dick.epub");
+            var Book = ePub("./reader/moby-dick.epub");
         </script>
     </head>
     <body>
