--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         <!-- Zip JS -->
         <script src="./build/zip.min.js"></script>
         
+          <style type="text/css">
+            .book {
+                height:500px;
+                width:750px;
+            }
+          </style>
+        
         <script>
             "use strict";
             var Book = ePub("./reader/moby-dick.epub");
@@ -23,7 +30,7 @@
     <body>
         <div id="main">
           <div id="prev" onclick="Book.prevPage();" class="arrow">‹</div>
-          <div id="area"></div>
+          <div id="area" class = "book"></div>
           <div id="next" onclick="Book.nextPage();" class="arrow">›</div>
         </div>
 
