--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="basic.css">
 
         <!-- EPUBJS Renderer -->
-        <script src="./build/epub.js"></script>
+        <script src="./build/epub.min.js"></script>
 
         <!-- Zip JS -->
         <script src="./build/zip.min.js"></script>
