--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <script>
-            Book.renderTo("area", {width: 600, height: 800});
+            Book.renderTo("area");
         </script>
     </body>
 </html>
