--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
         <script>
             "use strict";
-            var Book = ePub("./reader/moby-dick.epub" {
+            var Book = ePub("./reader/moby-dick.epub", {
               width: 400,
               height: 600,
               spreads : false
