--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>Contained ePub Example</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Basic ePubJS Example</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <meta name="apple-mobile-web-app-capable" content="yes">
