--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         
         <script>
             "use strict";
-            var Book = ePub("./reader/SS16_GL_Packet.epub", {
+            var Book = ePub("./reader/moby-dick.epub", {
               width: 400,
               height: 650,
               spreads : false
