--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
         </div>
         <script>
-            Book.renderTo("area");
+            //Book.renderTo("area");
         </script>
         <footer>Copyright &copy; FlypPage 2016</footer>
         <script src="js/jquery-1.11.3.min.js"></script>
