--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <!-- /.container-fluid -->
         </nav>
         <div class="container-fluid">
-            <div id="reader-wrap" class="row">
+            <div class="row">
                 <div id="prev" onclick="book.prevPage();" class="reader col-xs-1 col-sm-2 col-lg-2">Previous Page</div>
 
                 <div id="area" class = "reader col-xs-10 col-sm-8 col-lg-8" onclick="book.nextPage();"></div>
