--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <!-- Zip JS -->
         <script src="build/zip.min.js"></script>
         
-        <style type="text/css">
+        <!-- <style type="text/css">
             body {
                 overflow: auto;
                 background: #eee;
             }
-        </style>
+        </style> -->
         
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
         <link href="css/styles.css" rel="stylesheet" type="text/css">
@@ -27,8 +27,8 @@
         <script>
             "use strict";
             var Book = ePub("./reader/moby-dick.epub", {
-              width: 400,
-              height: 650,
+              //width: 400,
+              //height: 650,
               spreads : false
             });
         </script>
