--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
         </nav>
         <div class="container-fluid">
             <div class="row">
-                <div id="prev" onclick="book.prevPage();" class="reader col-xs-1 col-sm-2 col-lg-2">Previous Page</div>
+                <div id="prev" onclick="book.prevPage();" class="reader col-xs-1 col-sm-2 col-lg-2">Back</div>
 
-                <div id="area" class = "reader col-xs-10 col-sm-8 col-lg-8" onclick="book.nextPage();"></div>
+                <div id="area" class = "reader col-xs-10 col-sm-8 col-lg-8"></div>
 
-                <div id="next" onclick="book.nextPage();" class="reader col-xs-1 col-sm-2 col-lg-2">Next Page</div>
+                <div id="next" onclick="book.nextPage();" class="reader col-xs-1 col-sm-2 col-lg-2">Next</div>
             </div>
         </div>
         <script>
