--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <script>
             "use strict";
             var Book = ePub("./reader/moby-dick.epub", {
-              //width: 400,
-              //height: 650,
+              width: 400,
+              height: 650,
               spreads : false
             });
         </script>
