--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             }
         </style> -->
         
-        <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+        <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css"> -->
         <link href="css/styles.css" rel="stylesheet" type="text/css">
         
         <script>
