--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <body>
         <div id="main">
           <div id="prev" onclick="Book.prevPage();" class="arrow">‹</div>
-          <div id="area"></div>
+          <div id="area" onclick="Book.nextPage();"></div>
           <div id="next" onclick="Book.nextPage();" class="arrow">›</div>
         </div>
 
