--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </style> -->
         
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-        <link href="css/styles.css" rel="stylesheet" type="text/css">
+        <link href="styles.css" rel="stylesheet" type="text/css">
         
         <script>
             "use strict";
@@ -65,11 +65,11 @@
         </nav>
         <div class="container-fluid">
             <div class="row">
-                <div id="prev" onclick="book.prevPage();" class="reader col-xs-1 col-sm-2 col-lg-2">Back</div>
+                <div id="prev" onclick="book.prevPage();" class="reader col-xs-2 col-sm-2 col-lg-2">‹</div>
 
-                <div id="area" class = "reader col-xs-10 col-sm-8 col-lg-8"></div>
+                <div id="area" class = "reader col-xs-8 col-sm-8 col-lg-8"></div>
 
-                <div id="next" onclick="book.nextPage();" class="reader col-xs-1 col-sm-2 col-lg-2">Next</div>
+                <div id="next" onclick="book.nextPage();" class="reader col-xs-2 col-sm-2 col-lg-2">›</div>
             </div>
         </div>
         <script>
