--- a/index.html
+++ b/index.html
@@ -65,11 +65,15 @@
         </nav>
         <div class="container-fluid">
             <div class="row">
-                <div id="prev" onclick="book.prevPage();" class="reader col-xs-2 col-sm-2 col-lg-2">‹</div>
+                <div id="prev" class="reader col-xs-2 col-sm-2 col-lg-2">
+                    <button onclick="book.prevPage();">Back</button>
+                </div>
 
                 <div id="area" class = "reader col-xs-8 col-sm-8 col-lg-8"></div>
 
-                <div id="next" onclick="book.nextPage();" class="reader col-xs-2 col-sm-2 col-lg-2">›</div>
+                <div id="next" class="reader col-xs-2 col-sm-2 col-lg-2">
+                    <button onclick="book.nextPage();">Next</button>
+                </div>
             </div>
         </div>
         <script>
