--- a/index.html
+++ b/index.html
@@ -66,14 +66,16 @@
         <div class="container-fluid">
             <div class="row">
                 <div id="prev" class="reader col-xs-2 col-sm-2 col-lg-2">
-                    <button onclick="book.prevPage();">Back</button>
+                    <button onclick="book.prevPage();"></button>
                 </div>
 
                 <div id="area" class = "reader col-xs-8 col-sm-8 col-lg-8"></div>
 
-                <div id="next" class="reader col-xs-2 col-sm-2 col-lg-2">
-                    <button onclick="book.nextPage();">Next</button>
+                <button onclick="book.nextPage();">
+                <div id="next" class="reader col-xs-2 col-sm-2 col-lg-2">  
                 </div>
+                </button>
+                
             </div>
         </div>
         <script>
