--- a/index.html
+++ b/index.html
@@ -65,16 +65,15 @@
         </nav>
         <div class="container-fluid">
             <div class="row">
-                <div id="prev" class="reader col-xs-2 col-sm-2 col-lg-2">
-                    <button onclick="book.prevPage();"></button>
+                <div onclick="book.prevPage();" id="prev" class="reader col-xs-2 col-sm-2 col-lg-2">
+                    <
                 </div>
 
                 <div id="area" class = "reader col-xs-8 col-sm-8 col-lg-8"></div>
 
-                <button onclick="book.nextPage();">
-                <div id="next" class="reader col-xs-2 col-sm-2 col-lg-2">  
+                <div onclick="book.nextPage();" id="next" class="reader col-xs-2 col-sm-2 col-lg-2">  
+                    >
                 </div>
-                </button>
                 
             </div>
         </div>
