--- a/index.html
+++ b/index.html
@@ -65,16 +65,11 @@
         </nav>
         <div class="container-fluid">
             <div class="row">
-                <div onclick="book.prevPage();" id="prev" class="reader col-xs-2 col-sm-2 col-lg-2">
-                    <
-                </div>
+                <div id="prev" onclick="book.prevPage();" class="reader col-xs-2 col-sm-2 col-lg-2">Back</div>
 
                 <div id="area" class = "reader col-xs-8 col-sm-8 col-lg-8"></div>
 
-                <div onclick="book.nextPage();" id="next" class="reader col-xs-2 col-sm-2 col-lg-2">  
-                    >
-                </div>
-                
+                <div id="next" onclick="book.nextPage();" class="reader col-xs-2 col-sm-2 col-lg-2">Next</div>
             </div>
         </div>
         <script>
