--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@
         <div class="container-fluid">
             <div class="row">
                 <div id="createNewAssignment" class="col-xs-4 col-xs-offset-4" align="center">
-                    <button type="button" class="btn btn-success">Success</button>
+                    <button type="button" class="btn btn-success btn-lg">Create New Assignment</button>
                 </div>
             </div>
+            
+            <br><br>
             
             <div class="row">
                 <form class="form-horizontal">
