--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@
                         </div>
                     </div>
                     
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for="submit"></label>
+                        <div class="col-md-4">
+                            <label class="checkbox-inline" for="submit">
+                                <input class="btn btn-success" type="submit" name="submit" id="submit" value="Add New Question">
+                            </label>
+                        </div>
+                    </div>
+                    
                 </form>
             </div>
         </div>
