--- a/index.html
+++ b/index.html
@@ -30,11 +30,8 @@
         <script src="js/bootstrap.js"></script>
         
         <script>
-            $(document).ready(function(){
-                $("createNewAssignment").click(function(){
-                     $("img").after("<i>After</i>");
-                });
-            });
+                $("#createNewAssignment").click(function(){
+                    $("#createNewAssignment").hide();
         </script>
         
         <script>
