--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         
         <div class="container-fluid">
             <div class="row">
-                <div id="createNewAssignment" class="col-xs-4 col-xs-offset-4" align="center">
-                    <button type="button" class="btn btn-success btn-lg">Create New Assignment</button>
+                <div class="col-xs-4 col-xs-offset-4" align="center">
+                    <button id="createNewAssignment" class="btn btn-success btn-lg">Create New Assignment</button>
                 </div>
             </div>
             
