--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                     
                     <!-- Assignment Submit Button -->
                     <div class="form-group">
-                        <label class="col-md-4 control-label" for="submit"></label>
-                        <div class="col-md-4">
+                        <label class="col-xs-4 col-xs-offset-3 control-label" for="submit"></label>
+                        <div class="col-xs-2">
                             <label class="checkbox-inline" for="submit">
                                 <input class="btn btn-success" type="submit" name="submit" id="submit" value="Add New Question">
                             </label>
