--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     
                     <!-- Assignment Description -->
                     <div class="form-group">
-                        <label class="col-xs-2 col-xs-offset-3 control-label" for="assignmentDescription">Assignment Description:</label>
+                        <label class="col-xs-2 col-xs-offset-3 control-label" for="assignmentDescription">Description:</label>
                             <div class="col-xs-4">
                             <input id="assignmentDescription" name="assignmentDescription" type="text" placeholder="Assignment Description" class="form-control input-md" required="">
                         </div>
