--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
                     
                     <!-- Assignment Submit Button -->
                     <div class="form-group">
-                        <label class="col-xs-4 col-xs-offset-3 control-label" for="submit"></label>
+                        <input class="btn btn-success" type="button" name="addQuestion" id="addQuestion" value="Add New Question">
                         <div class="col-xs-2">
                             <label class="checkbox-inline" for="submit">
-                                <input class="btn btn-success" type="submit" name="submit" id="submit" value="Add New Question">
+                                <input class="btn btn-success" type="button" name="cancel" id="cancel" value="Cancel">
                             </label>
                         </div>
                     </div>
