--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                     
                     <!-- Assignment Submit Button -->
                     <div class="form-group">
-                        <input class="btn btn-success" type="button" name="addQuestion" id="addQuestion" value="Add New Question">
-                        <div class="col-xs-2">
+                        <!-- <input class="btn btn-success" type="button" name="addQuestion" id="addQuestion" value="Add New Question"> -->
+                        <div class="col-xs-4 col-xs-offset-4">
                             <label class="checkbox-inline" for="submit">
                                 <input class="btn btn-success" type="button" name="cancel" id="cancel" value="Cancel">
                             </label>
