--- a/index.html
+++ b/index.html
@@ -88,10 +88,13 @@
 
         <br>
         
+        <!-- Create a new assignment -->
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-4 col-xs-offset-4">
-                    <button id="createNewAssignment" type="button" class="btn btn-success btn-lg">Create New Assignment</button>
+                    <label class="checkbox-inLine" for="assignment">
+                        <input class="btn btn-success btn-lg" type="button" name="assignment" id="assignment" value="New Assignment">
+                    </label>
                 </div>
             </div>
             
