--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
         
         <!-- Create a new assignment -->
         <div class="container-fluid">
-            <div class="row">
+            <div>
                 <div class="col-xs-4 col-xs-offset-4">
                     <label class="checkbox-inLine" for="assignment">
-                        <input class="btn btn-success btn-lg" type="button" name="assignment" id="assignment" value="New Assignment">
+                        <input class="btn btn-success" type="button" name="assignment" id="assignment" value="New Assignment">
                     </label>
                 </div>
             </div>
