--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div>
                 <div class="col-xs-4 col-xs-offset-4">
                     <label class="checkbox-inLine" for="assignment">
-                        <input class="btn btn-success" type="button" name="assignment" id="assignment" value="New Assignment">
+                        <input class="btn btn-success btn-lg" type="button" name="assignment" id="assignment" value="New Assignment">
                     </label>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                     <!-- Assignment Name -->
                     <div class="form-group">
                         <label class="col-xs-2 col-xs-offset-3 control-label" for="assignmentName">Assignment Name:</label>
-                            <div class="col-xs-4">
+                            <div class="col-xs-4 col-lg-3">
                             <input id="assignmentName" name="assignmentName" type="text" placeholder="Assignment Name" class="form-control input-md" required="">
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                     <!-- Assignment Description -->
                     <div class="form-group">
                         <label class="col-xs-2 col-xs-offset-3 control-label" for="assignmentDescription">Description:</label>
-                            <div class="col-xs-4">
+                            <div class="col-xs-4 col-lg-3">
                             <input id="assignmentDescription" name="assignmentDescription" type="text" placeholder="Assignment Description" class="form-control input-md" required="">
                         </div>
                     </div>
