--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         <script>                    
             $(document).ready(function(){
-                $("#createNewAssignment").click(function(){
+                $("#newAssignment").click(function(){
                     $(".form-horizontal").toggle();
                 });
             });
