--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
         <!-- Create a new assignment -->
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-4 col-xs-offset-4">
+                <div class="col-xs-4 col-xs-offset-4 col-lg-2 col-lg-offset-5">
                     <label class="checkbox-inLine" for="assignment">
                         <input class="btn btn-success btn-lg" type="button" name="assignment" id="assignment" value="New Assignment">
                     </label>
                 </div>
             </div>
             
-            <br><br><br>
+            <br><br>
             
             <div class="row">
                 <form class="form-horizontal">
