--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         
         <!-- Create a new assignment -->
         <div class="container-fluid">
-            <div>
-                <div class="col-xs-4 col-xs-offset-4 col-lg-2 col-lg-offset-5">
-                    <label class="checkbox-inLine" for="assignment">
+            <div class="row">
+                <div>
+                    <label class="col-xs-4 col-xs-offset-4 col-lg-2 col-lg-offset-5 checkbox-inLine" for="assignment">
                         <input class="btn btn-success btn-lg" type="button" name="assignment" id="assignment" value="New Assignment">
                     </label>
                 </div>
