--- a/index.html
+++ b/index.html
@@ -138,8 +138,15 @@
                     <!-- Assignment Submit Button -->
                     <div class="form-group">
                         <!-- <input class="btn btn-success" type="button" name="addQuestion" id="addQuestion" value="Add New Question"> -->
-                        <div class="col-xs-4 col-xs-offset-4">
-                            <label class="checkbox-inline" for="submit">
+                        
+                        <div class="col-xs-4 col-xs-offset-2">
+                            <label class="checkbox-inline" for="newQuestion">
+                                <input class="btn btn-success" type="button" name="newQuestion" id="newQuestion" value="New Question">
+                            </label>
+                        </div>
+                        
+                        <div class="col-xs-4">
+                            <label class="checkbox-inline" for="cancelAssignment">
                                 <input class="btn btn-success" type="button" name="cancel" id="cancel" value="Cancel">
                             </label>
                         </div>
