--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             $(document).ready(function(){
                 $("#assignment").click(function(){
                     //$(".form-horizontal").toggle(); 
-                    $("#assignmentForm").html("<p>Changed</p>");
+                    $(".form-horizontal").append("<p>Changed</p>");
                 });
             });
         </script>
