--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         <script>                    
             $(document).ready(function(){
-                $("#assignment").once ('click', function(){
+                $("#assignment").one ('click', function(){
                     //$(".form-horizontal").toggle(); 
                     $("#assignmentForm").append('<form class="form-horizontal"></form>');
                     $("#assignmentForm form").append('<div class="form-group" id="addAssignmentName"></div>');
