--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     $("#assignmentForm form #addAssignmentDescription").append('<div class="col-xs-6 col-md-4 col-lg-3"></div>');
                     $("#assignmentForm form #addAssignmentDescription div").append('<input id="assignmentDescription" name="assignmentDescription" type="text" placeholder="Assignment Description" class="form-control input-md" required="">');
                     
-                    $("#assignmentForm form").append('<div class="form-group id="cancelAssignment"></div>');
+                    $("#assignmentForm form").append('<div class="form-group" id="cancelAssignment"></div>');
                     $("#assignmentForm form #cancelAssignment").append('<div class="col-xs-8 col-xs-offset-2"></div>');
                     $("#assignmentForm form #cancelAssignment div").append('<label class="checkbox-inline" for="cancelAssignment"></label>');
                     $("#assignmentForm form #cancelAssignment div label").append('<input class="btn btn-success" type="button" name="cancel" id="cancel" value="Cancel">');
@@ -134,7 +134,7 @@
                         </div>
                     </div>
 
-                    <div class="form-group id="cancelAssignment">
+                    <div class="form-group" id="cancelAssignment">
                         <div class="col-xs-8 col-xs-offset-2">
                             <label class="checkbox-inline" for="cancelAssignment">
                                 <input class="btn btn-success" type="button" name="cancel" id="cancel" value="Cancel">
