--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 });
                 
                 //Function to hide new assignment details when canceled by the user
-                $("#cancelAssignment").click(function(){
+                $("#cancel").click(function(){
                     $("#assignmentForm").show();
                 });
             });
