--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 });
                 
                 //Function to hide new assignment details when canceled by the user
-                $("#cancelAssignment").click(function(){
-                    $("#assignmentForm").hide();
+                $("#cancel").click(function(){
+                    $("#assignmentForm").empty();
                 });
             });
         </script>
