--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 
                 //Function to hide new assignment details when canceled by the user
                 $("#cancel").click(function(){
-                    $("#assignmentForm").empty();
+                    $("#assignmentForm").remove();
                 });
             });
         </script>
