--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     $("#assignmentForm form #cancelAssignment div").append('<label class="checkbox-inline" for="cancelAssignment"></label>');
                     $("#assignmentForm form #cancelAssignment div label").append('<input class="btn btn-success" type="button" name="cancelAssignment" id="cancelAssignment" value="Cancel">');
                     $("#assignmentForm form #cancelAssignment div").append('<label id="addquestion" class="checkbox-inline" for="addQuestion"></label>');
-                    $("#assignmentForm form #cancelAssignment div #addquestion").append('<input class="btn btn-success" type="button" name="addQuestion" id="addQuestion" value="Add Question">');
+                    //$("#assignmentForm form #cancelAssignment div #addquestion").append('<input class="btn btn-success" type="button" name="addQuestion" id="addQuestion" value="Add Question">');
                     
                     
                 });
