--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     $("#assignmentForm form #cancelAssignment").append('<div class="col-xs-8 col-xs-offset-2"></div>');
                     $("#assignmentForm form #cancelAssignment div").append('<label class="checkbox-inline" for="cancelAssignment"></label>');
                     $("#assignmentForm form #cancelAssignment div label").append('<input class="btn btn-success" type="button" name="cancelAssignment" id="cancelAssignment" value="Cancel">');
-                    $("#assignmentForm form #cancelAssignment div").append('<label id="addquestion" class="checkbox-inline" for="addQuestion"></label>');
+                    //$("#assignmentForm form #cancelAssignment div").append('<label id="addquestion" class="checkbox-inline" for="addQuestion"></label>');
                     //$("#assignmentForm form #cancelAssignment div #addquestion").append('<input class="btn btn-success" type="button" name="addQuestion" id="addQuestion" value="Add Question">');
                     
                     
