--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                     $("#assignmentForm form #cancelAssignment").append('<div class="col-xs-8 col-xs-offset-2"></div>');
                     $("#assignmentForm form #cancelAssignment div").append('<label class="checkbox-inline" for="cancelAssignment"></label>');
                     $("#assignmentForm form #cancelAssignment div label").append('<input class="btn btn-success" type="button" name="cancel" id="cancel" value="Cancel">');
+                    $("#assignmentForm form #cancelAssignment div").append('<label class="checkbox-inline" for="cancelAssignment"></label>');
+                    $("#assignmentForm form #cancelAssignment div label").append('<input class="btn btn-success" type="button" name="cancel" id="cancel" value="Cancel">');
                 });
             });
         </script>
@@ -152,4 +154,3 @@
         <script src="js/bootstrap.js"></script>
     </body>
 </html>
-Contact GitHub API Training Shop Blog About
