--- a/index.html
+++ b/index.html
@@ -141,9 +141,21 @@
                             </label>
                         </div>
                     </div>
+                                        
+                    <div class="col-xs-4 col-xs-offset-3 col-sm-4 col-sm-offset-3 col-md-4 col-md-offset-4 col-lg-2 col-lg-offset-5 form-group btn-group" id="questionOptions">
+                        <button type="button" class="btn btn-success">Create New Question</button>
+                        <button type="button" class="btn btn-success">Choose Pre-reading Question</button>
+                        <button type="button" class="btn btn-success">Choose Post-reading Question</button>
+                    </div>
  
                 </form>
                 -->
+                
+                <div class="col-xs-4 col-xs-offset-3 col-sm-4 col-sm-offset-3 col-md-4 col-md-offset-4 col-lg-2 col-lg-offset-5 form-group btn-group" id="questionOptions">
+                    <button type="button" class="btn btn-success">Create New Question</button>
+                    <button type="button" class="btn btn-success">Choose Pre-reading Question</button>
+                    <button type="button" class="btn btn-success">Choose Post-reading Question</button>
+                </div>
 
             </div>
         </div>
