--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
                 </form>
                 -->
                 
-                <div class="col-xs-4 col-xs-offset-3 col-sm-4 col-sm-offset-3 col-md-4 col-md-offset-4 col-lg-2 col-lg-offset-5 form-group btn-group" id="questionOptions">
-                    <button type="button" class="btn btn-success">Create New Question</button>
-                    <button type="button" class="btn btn-success">Choose Pre-reading Question</button>
-                    <button type="button" class="btn btn-success">Choose Post-reading Question</button>
+                <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 form-group btn-group" id="questionOptions">
+                    <button type="button" class="btn btn-success">New Question</button>
+                    <button type="button" class="btn btn-success">Pre-reading Question</button>
+                    <button type="button" class="btn btn-success">Post-reading Question</button>
                 </div>
 
             </div>
