--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </form>
                 -->
                 
-                <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 form-group btn-group" id="questionOptions">
+                <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 form-group btn-group-vertical" id="questionOptions">
                     <button type="button" class="btn btn-success">New Question</button>
                     <button type="button" class="btn btn-success">Pre-reading Question</button>
                     <button type="button" class="btn btn-success">Post-reading Question</button>
