--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         <script>                    
             $(document).ready(function(){
-                $("#assignment").one ('click', function(){
+                $("#assignment").on ('click', function(){
                     //$(".form-horizontal").toggle(); 
                     $("#assignmentForm").append('<form class="form-horizontal"></form>');
                     $("#assignmentForm form").append('<div class="form-group" id="addAssignmentName"></div>');
@@ -50,7 +50,7 @@
                     $("#assignmentForm form #cancelOrContinue div").append('<label id="cancel" class="checkbox-inline" for="cancelAssignment"></label>');  
                     $("#assignmentForm form #cancelOrContinue div #cancel").append('<input class="btn btn-success" type="button" name="cancelassignment" id="cancelassignment" value="Cancel">');
                     
-                    $("#addquestion").one ('click', function(){
+                    $("#addquestion").on ('click', function(){
                         $("#assignmentForm form").append('<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-4 col-md-2 col-md-offset-5 col-lg-2 col-lg-offset-5 form-group btn-group-vertical" id="questionOptions">');
                         $("assignmentForm form #questionOptions").append('<button type="button" class="btn btn-success">New Question</button>');
                         $("assignmentForm form #questionOptions").append('<button type="button" class="btn btn-success">Pre-reading Question</button>');
