--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 var test = '<p>HELLO</p>';
                 
                 $("#assignment").click (function(){
-                    $("#assignmentForm").append(test);    
+                    $("#assignmentForm").append(assignmentQuestions);    
                 });
                 
             });
