--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 $("#assignment").click (function(){
                     $("#assignmentForm").append(assignmentName);
                     $("#assignmentForm").append(assignmentDescription);
-                    $("#assignmentForm").append(assignmentDescription);
+                    //$("#assignmentForm").append(assignmentDescription);
                 });
                 
             });
