--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 var test = '<p>HELLO</p>';
                 
                 $("#assignment").click (function(){
-                    $("#assignmentForm").append(assignmentName);
+                    //$("#assignmentForm").append(assignmentName);
                     $("#assignmentForm").append(assignmentDescription);
                     //$("#assignmentForm").append(assignmentDescription);
                 });
