--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     $("#assignmentForm").append(assignmentButtons);
                 });
                 
-                $("#addquestion").one ('click', function(){
+                $("input#addquestion").one ('click', function(){
                     $("#assignmentForm").append(test);
                 });
                 
