--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 $(questionOptions).appendTo("#assignmentForm");
                     
                 //On the click of the 'Add Question' button, add the following:
-                $("addNewQuestion").one ('click', function(){
+                $("questionOptions").one ('click', function(){
                     $(prereadingQuestion).appendTo("#assignmentForm");
                 });
                 
