--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 */
                     
                 //On the click of the 'Cancel' button, remove the following:
-                $("input#cancelassignment).one ('click', function(){
+                $("input#cancelassignment").one ('click', function(){
                     $("#addAssignmentName").hide();
                     $("addAssignmentDescription").hide();
                     $("cancelOrContinue").hide();
