--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             "use strict";
             var Book = ePub("./reader/moby-dick.epub", {
               //width: 400,
-              //height: 500,
+              height: 500,
               spreads : false
             });
         </script>
@@ -63,11 +63,12 @@
             <!-- /.container-fluid -->
         </nav>
         <div class="container-fluid">
-            <div id="prev" onclick="Book.prevPage();" class="reader col-xs-2 col-sm-2 col-lg-1">Back</div>
+            
+            <div id="prev" onclick="Book.prevPage();" class="reader col-xs-1 col-sm-1 col-md-2 col-lg-2">Back</div>
 
-            <div id="area" class = "reader col-xs-8 col-sm-8 col-lg-10"></div>
+            <div id="area" class = "reader col-xs-10 col-sm-10 col-md-8 col-lg-8"></div>
 
-            <div id="next" onclick="Book.nextPage();" class="reader col-xs-2 col-sm-2 col-lg-1">Next</div>
+            <div id="next" onclick="Book.nextPage();" class="reader col-xs-1 col-sm-1 col-md-2 col-lg-2">Next</div>
         </div>
         
         <script>
