--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <script>
             "use strict";
             var Book = ePub("./reader/moby-dick.epub", {
-              //width: 400,
-              height: 500,
+              width: 500,
+              height: 600,
               spreads : false
             });
         </script>
