--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <script>
             "use strict";
             var Book = ePub("./reader/moby-dick.epub", {
+            var Book = ePub("./reader/moby-dick.epub", {
               width: 500,
               height: 600,
               spreads : false
