--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         
         <script>
             "use strict";
-            var Book = ePub("./reader/moby-dick.epub", {
-            var Book = ePub("./reader/moby-dick.epub", {
+            //var Book = ePub("./reader/moby-dick.epub", {
+            var Book = ePub("./reader/TheLadyOrTheTiger_By_FrankStockton.epub", {
               width: 500,
               height: 600,
               spreads : false
