--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <script>
             "use strict";
             //var Book = ePub("./reader/moby-dick.epub", {
-            var Book = ePub("./reader/TheLadyOrTheTiger_By_FrankStockton (1).epub", {
+            var Book = ePub("./reader/The Lady Or The Tiger (2016.12.01-04.18.03Z).epub", {
               width: 540,
               height: 600,
               spreads : false
