--- a/index.html
+++ b/index.html
@@ -65,11 +65,15 @@
         </nav>
         <div class="container-fluid">
             
-            <div id="prev" onclick="Book.prevPage();" class="reader col-xs-1 col-sm-1 col-md-2 col-lg-2">Back</div>
+            <div id="prev" onclick="Book.prevPage();" class="reader col-xs-1 col-sm-1 col-md-2 col-lg-2">
+                <span class="glyphicon glyphicon-circle-arrow-left"></span>
+            </div>
 
             <div id="area" class = "reader col-xs-10 col-sm-10 col-md-8 col-lg-8"></div>
 
-            <div id="next" onclick="Book.nextPage();" class="reader col-xs-1 col-sm-1 col-md-2 col-lg-2">Next</div>
+            <div id="next" onclick="Book.nextPage();" class="reader col-xs-1 col-sm-1 col-md-2 col-lg-2">
+                <span class="glyphicon glyphicon-circle-arrow-right"></span>
+            </div>
         </div>
         
         <script>
