--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         <div class="container-fluid">
             
             <div id="prev" onclick="Book.prevPage();" class="reader col-xs-1 col-sm-2 col-md-2 col-lg-2">
-                <span class="glyphicon glyphicon-circle-arrow-left" align="left"></span>
+                <span class="glyphicon glyphicon-circle-arrow-left"></span>
             </div>
 
             <div id="area" class = "reader col-xs-10 col-sm-8 col-md-8 col-lg-8"></div>
 
             <div id="next" onclick="Book.nextPage();" class="reader col-xs-1 col-sm-2 col-md-2 col-lg-2">
-                <span class="glyphicon glyphicon-circle-arrow-right" align="right"></span>
+                <span class="glyphicon glyphicon-circle-arrow-right"></span>
             </div>
         </div>
         
