--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             var Book = ePub("./reader/TheLadyOrTheTiger_By_FrankStockton (2).epub", {
               width: 540,
               height: 600,
-              spreads : false
+              spreads : true
             });
         </script>
         
