--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             var Book = ePub("./reader/TheLadyOrTheTiger_By_FrankStockton (2).epub", {
               width: 540,
               height: 600,
-              spreads : true
+              spreads : true,
+              fixedLayout : false
             });
         </script>
         
@@ -80,7 +81,7 @@
             Book.renderTo("area");
         </script>
 
-        <br>
+        <br><br>
         
         <!-- Create a new assignment -->
         <div class="container-fluid">
