--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         
         <script>
             "use strict";
-            //var Book = ePub("./reader/moby-dick.epub", {
-            var Book = ePub("./reader/TheLadyOrTheTiger_By_FrankStockton (2).epub", {
+
+            var Book = ePub("./reader/The Whistler - John Grisham.epub", {
               width: 540,
               height: 600,
               spreads : true,
