--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <script>
             "use strict";
 
-            var Book = ePub("./reader/The Whistler - John Grisham.epub", {
+            var Book = ePub("./reader/TheSniper_By_LiamOFlaherty.epub", {
               width: 540,
               height: 600,
               spreads : false
