--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <script>
             "use strict";
 
-            var Book = ePub("./reader/TheSniper_By_LiamOFlaherty.epub", {
+            var Book = ePub("./reader/The Whistler - John Grisham.epub", {
               width: 540,
-              height: 600,
+              height: 650,
               spreads : false
             });
         </script>
