--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <script>
             "use strict";
 
-            var Book = ePub("./reader/The Whistler - John Grisham.epub", {
+            var Book = ePub("./reader/pg501-images.epub", {
               width: 540,
               height: 600,
               spreads : false
