--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
            
         <!-- Hold the form to create the assignment -->
         <div class="row">    
-            <form class="form-horizontal" id="assignmentForm"></form>
+            <form class="form-horizontal" id="assignmentForm" action="teacherHomePage.html"></form>
         </div>
         
         <br>
