--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>FlypPage - Teacher Home Page</title>
+
+        <title>FlypPage - Student Home Page</title>
+
+        <!-- Bootstrap -->
         <link href="./css/bootstrap.css" rel="stylesheet">
         <link href="jQueryAssets/jquery.ui.core.min.css" rel="stylesheet" type="text/css">
         <link href="jQueryAssets/jquery.ui.theme.min.css" rel="stylesheet" type="text/css">
+
         <link href="./css/styles.css" rel="stylesheet" type="text/css">
-        <script src="./js/jquery-1.11.3.min.js"></script>
+
     </head>
     <body>
         <div class="container-fluid">
-            <nav class="navbar navbar-inverse navbar-custom">
+            <nav class="mainbar navbar navbar-inverse navbar-custom">
                 <div class="container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
@@ -23,23 +27,23 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <!-- link to go to login -->
+                        <!-- NOTE: This should either bring you to the index.html login OR do nothing because you are at your 'homepage' -->
                         <a class="navbar-brand" href="index.html">FlypPage</a>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="inverseNavbar1">
                         <ul class="nav navbar-nav">
                             <li>
-                                <a href="teacherBookReader.html">Teacher Page</a>
+                                <a href="studentBookReader.html">Student Page</a>
                             </li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <!-- bring to account page OR display login ID -->
+                                <!-- This should display your login ID or bring you to an account page -->
                                 <a href="#">Account</a>
                             </li>
                             <li>
-                                <!-- Logout AND bring back to login page -->
+                                <!-- tab to bring you to login AND log you out -->
                                 <a href="index.html">Logout</a>
                             </li>
                         </ul>
@@ -48,11 +52,11 @@
                 </div>
                 <!-- /.container-fluid -->
             </nav>
+
             <div role="tabpanel">
                 <ul class="nav nav-tabs" role="tablist">
                     <li role="presentation" class="active">
-                        <!-- list of all this teachers created assignments -->
-                        <a href="#home1" data-toggle="tab" role="tab" aria-controls="tab1">Created Class Assignments</a>
+                        <a href="#home1" data-toggle="tab" role="tab" aria-controls="tab1">Class Assignments</a>
                     </li>
                     <li role="presentation">
                         <a href="#paneTwo1" data-toggle="tab" role="tab" aria-controls="tab2">Library</a>
@@ -64,6 +68,7 @@
                             <div class="panel-heading">
                                 <h3 class="panel-title">Assignments</h3>
                             </div>
+                            <!-- list of all students assignments -->
                             <div class="pre-scrollable">
                                 Assignment A - Book
                             </div>
@@ -75,14 +80,14 @@
                             <!-- THIS NEXT DIV IS ONE THUMBNAIL FOR A BOOK -->
                             <div class="col-md-4 col-sm-4">
                                 <!-- library example -->
+                                <!-- the 'src' NEEDS to be assignable as a class, which will allow auto generation via AngularJS (or javascript) and the book library -->
                                 <div class="thumbnail"><img src="images/TheLadyOrTheTiger.jpg" alt="Thumbnail Image 1">
-                                    <!-- NOTE: id needs to be 'unique', therefore, just like 'src', this needs to be auto-generated -->
-                                    <div class="caption" id="book_info">
+                                    <div class="caption">
                                         <h3>The Lady or the Tiger</h3>
                                         <p>Frank R. Stockton</p>
                                         <p>Short Story</p>
                                         <p>
-                                            <a href="teacherBookReader.html?passedbook=./reader/TheLadyOrTheTiger_By_FrankStockton.epub" class="btn btn-primary" role="button">Select Book</a>
+                                            <a href="studentBookReader.html?passedbook=./reader/TheLadyOrTheTiger_By_FrankStockton.epub" class="btn btn-primary" role="button">Read Book</a>                                       
                                             <!-- <a href="#" class="btn btn-default" role="button">Button</a> -->
                                         </p>
                                     </div>
@@ -91,12 +96,12 @@
                             <div class="col-md-4 col-sm-4">
                                 <!-- library example -->
                                 <div class="thumbnail"><img src="images/TheAmigoBrothers.jpg" alt="Thumbnail Image 1">
-                                    <div class="caption" id="book_info">
-                                        <h3>The Amigo Brothers</h3>
+                                    <div class="caption">
+                                        <h3>Amigo Brothers</h3>
                                         <p>Piri Thomas</p>
                                         <p>Short Story</p>
                                         <p>
-                                            <a href="teacherBookReader.html?passedbook=./reader/AmigoBrothersStory_By_PiriThomas.epub" class="btn btn-primary" role="button">Select Book</a>
+                                            <a href="studentBookReader.html?passedbook=./reader/AmigoBrothersStory_By_PiriThomas.epub" class="btn btn-primary" role="button">Read Book</a>
                                             <!-- <a href="#" class="btn btn-default" role="button">Button</a> -->
                                         </p>
                                     </div>
@@ -105,12 +110,12 @@
                             <div class="col-md-4 col-sm-4">
                                 <!-- library example -->
                                 <div class="thumbnail"><img src="images/TheScholarshipJacket.jpg" alt="Thumbnail Image 1">
-                                    <div class="caption" id="book_info">
+                                    <div class="caption">
                                         <h3>The Scholarship Jacket</h3>
                                         <p>Marta Salinas</p>
                                         <p>Short Story</p>
                                         <p>
-                                            <a href="teacherBookReader.html?passedbook=./reader/TheScholarshipJacket_By_MartaSalinas.epub" class="btn btn-primary" role="button">Select Book</a>
+                                            <a href="studentBookReader.html?passedbook=./reader/TheScholarshipJacket_By_MartaSalinas.epub" class="btn btn-primary" role="button">Read Book</a>
                                             <!-- <a href="#" class="btn btn-default" role="button">Button</a> -->
                                         </p>
                                     </div>
@@ -124,7 +129,6 @@
         <footer>Copyright &copy; FlypPage 2016</footer>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="js/jquery-1.11.3.min.js"></script>
-        <script src="js/flypaperjavascript.js"></script>
 
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="js/bootstrap.js"></script>
