--- a/studentBookReader.html
+++ b/studentBookReader.html
@@ -91,7 +91,7 @@
             <span class="glyphicon glyphicon-circle-arrow-right"></span>
         </div>
 
-        <div></div>
+        <div class="row"></div>
 
         <br> <br>
 
